--- a/css/main.css
+++ b/css/main.css
@@ -551,8 +551,11 @@ img {
     width: 270px;
     margin: 0 30px 0 0;
   }
+  .peculiarities__item:nth-child(n) {
+    margin: 0 30px 0 0;
+  }
   .peculiarities__item:last-child {
-    margin: 0px;
+    margin: 0;
   }
 }
 
@@ -754,7 +757,7 @@ img {
 
 .clients__links {
   fill: #AFB1B8;
-  width: 170px;
+  width: 100%;
   height: 92px;
   display: flex;
   justify-content: center;
@@ -771,16 +774,34 @@ img {
 
 .clients__list {
   display: flex;
-  text-align: center;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
-.clients__list li {
-  width: 170px;
-  margin-right: 30px;
+@media (min-width: 768px) {
+  .clients__list li {
+    width: 226px;
+    margin-right: 30px;
+  }
+  .clients__list li:nth-child(n-3) {
+    margin-bottom: 30px;
+  }
+  .clients__list li:nth-child(2n+1) {
+    margin-right: 0px;
+  }
+  .clients__list li:nth-child(n+4) {
+    margin-bottom: 0px;
+  }
 }
 
-.clients__list li:last-child {
-  margin-right: 0;
+@media (min-width: 1200px) {
+  .clients__list li {
+    width: 170px;
+    margin-right: 30px;
+  }
+  .clients__list li:last-child {
+    margin-right: 0;
+  }
 }
 
 .footer {
