--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,6 +1,6 @@
 .clients__links{
 fill: #AFB1B8;
-width: 170px;
+width: 100%;
 height: 92px;
 display: flex;
 justify-content: center;
@@ -15,12 +15,30 @@ border: 1px solid var(--active-color);
 }
 .clients__list{
 display: flex;
-text-align: center;
+flex-wrap: wrap;
+justify-content: center;
+@media (min-width:768px) {
+li{
+width: 226px;
+margin-right: 30px;
+&:nth-child(n-3){
+    margin-bottom:30px;
+}
+&:nth-child(2n+1){
+    margin-right:0px;
+}
+&:nth-child(n+4){
+    margin-bottom:0px;
+}
+}
+}
+@media (min-width:1200px) {
 li{
 width: 170px;
 margin-right: 30px;
 &:last-child{
     margin-right: 0;
+}
 }
 }
 
