--- a/sass/components/_peculiarities.scss
+++ b/sass/components/_peculiarities.scss
@@ -31,10 +31,13 @@ margin: 0 0 30px 0;
    }
    @media (min-width:1200px) {
     width: 270px;
-    margin:0 30px 0 0;
-    &:last-child {
-    margin: 0px;
-}
+   margin: 0 30px 0 0;
+   &:nth-child(n){
+       margin: 0 30px 0 0;
+   }
+   &:last-child{
+       margin: 0;
+   }
    }
 }
 
