--- a/css/main.css
+++ b/css/main.css
@@ -778,15 +778,32 @@ img {
   justify-content: center;
 }
 
+.clients__list li {
+  width: calc((100% - 2 * 30px) / 2);
+  margin: 0 0 30px 0;
+}
+
+.clients__list li:nth-child(2n+1) {
+  margin: 0 30px 30px 0;
+}
+
+.clients__list li:nth-child(5n) {
+  margin: 0 30px 0 0;
+}
+
+.clients__list li:last-child {
+  margin: 0;
+}
+
 @media (min-width: 768px) {
   .clients__list li {
-    width: 226px;
+    width: calc((100% - 3 * 30px) / 3);
     margin-right: 30px;
   }
   .clients__list li:nth-child(n-3) {
     margin-bottom: 30px;
   }
-  .clients__list li:nth-child(2n+1) {
+  .clients__list li:nth-child(3n) {
     margin-right: 0px;
   }
   .clients__list li:nth-child(n+4) {
@@ -796,7 +813,10 @@ img {
 
 @media (min-width: 1200px) {
   .clients__list li {
-    width: 170px;
+    width: calc((100% - 6 * 30px) / 6);
+    margin-right: 30px;
+  }
+  .clients__list li:nth-child(n) {
     margin-right: 30px;
   }
   .clients__list li:last-child {
