--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -17,14 +17,28 @@ border: 1px solid var(--active-color);
 display: flex;
 flex-wrap: wrap;
 justify-content: center;
+li{
+    width: calc((100% - 2 * 30px) / 2);
+    margin: 0 0 30px 0;
+    &:nth-child(2n+1){
+        margin:0 30px 30px 0;
+    }
+    &:nth-child(5n){
+        margin:0 30px 0 0;
+    }
+    &:last-child{
+        margin:0;
+    }
+}
+
 @media (min-width:768px) {
 li{
-width: 226px;
+width: calc((100% - 3 * 30px) / 3);
 margin-right: 30px;
 &:nth-child(n-3){
     margin-bottom:30px;
 }
-&:nth-child(2n+1){
+&:nth-child(3n){
     margin-right:0px;
 }
 &:nth-child(n+4){
@@ -34,8 +48,11 @@ margin-right: 30px;
 }
 @media (min-width:1200px) {
 li{
-width: 170px;
+width: calc((100% - 6 * 30px) / 6);
 margin-right: 30px;
+&:nth-child(n){
+    margin-right: 30px;
+}
 &:last-child{
     margin-right: 0;
 }
