--- a/css/main.css
+++ b/css/main.css
@@ -1082,6 +1082,7 @@ img {
   left: 0;
   width: 100%;
   height: 100%;
+  overflow-y: scroll;
 }
 
 .backdrop.is-hidden .backdrop__modal {
@@ -1090,14 +1091,36 @@ img {
 
 .backdrop__modal {
   position: absolute;
-  width: 528px;
-  height: 581px;
+  width: 95%;
+  height: 609px;
   background-color: #fff;
   top: 50%;
   left: 50%;
   transform: scale(1) translate(-50%, -50%);
   transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1), opacity 500ms cubic-bezier(0.4, 0, 0.2, 1), visibility 500ms cubic-bezier(0.4, 0, 0.2, 1);
   transform-origin: 0 -100%;
+}
+
+@media (max-width: 768px) {
+  .backdrop__modal {
+    top: 55%;
+  }
+}
+
+@media (min-width: 480px) {
+  .backdrop__modal {
+    width: 450px;
+    height: 609px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .backdrop__modal {
+    width: 528px;
+    height: 581px;
+    max-width: none;
+    max-height: none;
+  }
 }
 
 .backdrop__close {
@@ -1145,6 +1168,7 @@ img {
   display: inline-block;
   position: relative;
   margin-bottom: 10px;
+  width: 100%;
 }
 
 .modal__lable {
@@ -1156,13 +1180,19 @@ img {
 }
 
 .modal__input {
-  width: 448px;
+  width: 100%;
   height: 40px;
   padding: 12px 12px 12px 42px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   outline: none;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media (min-width: 1200px) {
+  .modal__input {
+    width: 448px;
+  }
 }
 
 .modal__input:focus {
@@ -1196,13 +1226,19 @@ img {
 
 .comment__input {
   padding: 12px 16px;
-  min-width: 448px;
+  min-width: 100%;
   height: 120px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   resize: none;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   outline: none;
+}
+
+@media (min-width: 1200px) {
+  .comment__input {
+    min-width: 100%;
+  }
 }
 
 .comment__input:focus {
@@ -1247,18 +1283,30 @@ img {
 }
 
 .modal__link {
-  font-size: 14px;
+  font-size: 12px;
   line-height: 24px;
   letter-spacing: 0.03em;
   text-decoration-line: underline;
   color: #2196F3;
 }
 
+@media (min-width: 1200px) {
+  .modal__link {
+    font-size: 14px;
+  }
+}
+
 .modal__text {
-  font-size: 14px;
+  font-size: 12px;
   line-height: 24px;
   letter-spacing: 0.03em;
   color: #757575;
+}
+
+@media (min-width: 1200px) {
+  .modal__text {
+    font-size: 14px;
+  }
 }
 
 .modal__send {
