--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -5,6 +5,7 @@ top: 0;
 left: 0;
 width: 100%;
 height: 100%;
+overflow-y: scroll;
 &.is-hidden {
     .backdrop__modal{
     transform: scale(0);
@@ -13,14 +14,29 @@ height: 100%;
 }
 .backdrop__modal{
 position: absolute;
+width: 95%;
+height: 609px;
+@media (max-width:768px) {
+top: 55%;
+
+}
+@media (min-width:480px) {
+width: 450px;
+height: 609px;
+}
+@media (min-width:1200px) {
 width: 528px;
 height: 581px;
+max-width: none;
+max-height:none ;
+}
 background-color: #fff;
 top: 50%;
 left: 50%;
 transform:  scale(1) translate(-50%,-50%);
 transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1) , opacity 500ms cubic-bezier(0.4, 0, 0.2, 1) , visibility 500ms cubic-bezier(0.4, 0, 0.2, 1);
 transform-origin: 0 -100%;
+
 }
 .backdrop__close{
 cursor: pointer;
