--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -19,6 +19,7 @@ margin-bottom: 12px;
     display: inline-block;
     position: relative;
     margin-bottom: 10px;
+    width: 100%;
 }
 
 .modal__lable {
@@ -29,7 +30,10 @@ color: #757575;
 margin-bottom: 4px;
 }
 .modal__input {
+    @media (min-width:1200px) {
     width: 448px;
+    }
+    width: 100%;
     height: 40px;
     padding: 12px 12px 12px 42px;
     border: 1px solid rgba(33, 33, 33, 0.2);
@@ -67,7 +71,10 @@ margin-bottom: 4px;
 }
 .comment__input {
     padding:12px 16px;
-    min-width: 448px;
+    @media (min-width:1200px) {
+    min-width: 100%;
+    }
+    min-width: 100%;
     height: 120px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
@@ -113,14 +120,20 @@ cursor: pointer;
 transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 .modal__link{
+@media (min-width:1200px) {
 font-size: 14px;
+}
+font-size: 12px;
 line-height: 24px;
 letter-spacing: 0.03em;
 text-decoration-line: underline;
 color: #2196F3;
 }
 .modal__text{
+@media (min-width:1200px) {
 font-size: 14px;
+}
+font-size: 12px;
 line-height: 24px;
 letter-spacing: 0.03em;
 color: #757575;
