--- a/css/main.css
+++ b/css/main.css
@@ -846,8 +846,6 @@ img {
 @media (min-width: 1200px) {
   .footer__container {
     display: flex;
-    flex-wrap: nowrap;
-    flex-direction: row;
     justify-content: space-between;
     align-items: baseline;
   }
@@ -871,7 +869,11 @@ img {
 @media (min-width: 1200px) {
   .footer__column {
     margin-right: 70px;
+    margin-bottom: 0;
     text-align: left;
+  }
+  .footer__column:nth-child(3) {
+    width: 570px;
   }
   .footer__column:last-child {
     margin-right: 0px;
@@ -987,6 +989,7 @@ img {
   .form-footer {
     display: block;
     max-width: none;
+    text-align: left;
   }
 }
 
@@ -1016,17 +1019,18 @@ img {
   background-color: transparent;
 }
 
+@media (min-width: 768px) {
+  .form-footer__input {
+    min-width: 450px;
+  }
+}
+
 @media (min-width: 1200px) {
   .form-footer__input {
     width: 358px;
     display: flex;
     align-items: center;
-  }
-}
-
-@media (min-width: 768px) {
-  .form-footer__input {
-    min-width: 450px;
+    min-width: 0;
   }
 }
 
@@ -1039,7 +1043,6 @@ img {
 @media (min-width: 1200px) {
   .form-footer__form {
     display: flex;
-    flex-direction: row;
   }
 }
 
