--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -13,8 +13,6 @@ align-items: center;
 }
 @media (min-width:1200px) {
 display: flex;
-flex-wrap: nowrap;
-flex-direction: row;
 justify-content: space-between;
 align-items: baseline;
 }
@@ -32,6 +30,10 @@ text-align: center;
 }
 @media (min-width:1200px) {
 margin-right: 70px;
+&:nth-child(3){
+    width: 570px;
+}
+margin-bottom: 0;
 text-align: left;
 &:last-child{
 margin-right: 0px;
@@ -49,11 +51,11 @@ text-transform: uppercase;
 color: #fff;
 }
 .footer__icons{
+        display: flex;
+    justify-content: center;
     @media (min-width:768px) {
     justify-content: center;
     }
-    display: flex;
-    justify-content: center;
     @media (min-width:1200px) {
     justify-content: stretch;
     }
@@ -137,6 +139,7 @@ margin: 0 auto;
 @media (min-width:1200px) {
 display: block;
 max-width: none;
+text-align: left;
 }
 }
 .form-footer__title {
@@ -149,13 +152,14 @@ color: #FFFFFF;
 margin-bottom: 20px;
 }
 .form-footer__input{
+@media (min-width:768px) {
+min-width: 450px;
+}
 @media (min-width:1200px) {
 width: 358px;
 display: flex;
 align-items: center;
-}
-@media (min-width:768px) {
-min-width: 450px;
+min-width: 0;
 }
 display: block;
 padding:12px 16px;
@@ -177,7 +181,6 @@ background-color: transparent;
     width: 100%;
     @media (min-width:1200px) {
     display: flex;
-    flex-direction: row;
     }
 }
 .form-footer__button {
