--- a/css/main.css
+++ b/css/main.css
@@ -1350,6 +1350,7 @@ img {
 @media (max-width: 768px) {
   .filter__list {
     flex-wrap: wrap;
+    justify-content: flex-start;
   }
 }
 
@@ -1393,17 +1394,61 @@ img {
   margin-bottom: -30px;
 }
 
-.portfolio__card {
-  margin-bottom: 30px;
-  margin-right: 30px;
-  width: 370px;
+@media (max-width: 768px) {
+  .portfolio__cards {
+    justify-content: center;
+  }
 }
 
-.portfolio__card:nth-child(3n+3) {
-  margin-right: 0px;
+.portfolio__card {
+  margin-bottom: 30px;
+  width: 100%;
+}
+
+.portfolio__card:last-child {
+  margin-bottom: 0;
+}
+
+@media (min-width: 768px) {
+  .portfolio__card {
+    width: calc((100% - 2 * 30px) / 2);
+    margin-right: 30px;
+    margin-bottom: 30px;
+  }
+  .portfolio__card:nth-child(2n) {
+    margin-right: 0;
+  }
+  .portfolio__card:last-child {
+    margin-bottom: 0px;
+    margin-right: 0px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .portfolio__card {
+    width: calc((100% - 3 * 30px) / 3);
+    margin-right: 30px;
+    margin-bottom: 30px;
+  }
+  .portfolio__card:nth-child(2n) {
+    margin-right: 30px;
+  }
+  .portfolio__card:nth-child(3) {
+    margin-right: 0;
+  }
+  .portfolio__card:nth-child(6) {
+    margin-right: 0;
+  }
+  .portfolio__card:nth-child(9) {
+    margin-right: 0;
+  }
+  .portfolio__card:nth-child(n+7) {
+    margin-bottom: 0;
+  }
 }
 
 .card-portfolio__content {
+  flex: 1 1 auto;
   border-bottom: 1px solid #EEEEEE;
   border-right: 1px solid #EEEEEE;
   border-left: 1px solid #EEEEEE;
@@ -1413,6 +1458,7 @@ img {
 .card-portfolio__image {
   position: relative;
   overflow: hidden;
+  max-height: 294px;
 }
 
 .card-portfolio__hover {
@@ -1422,7 +1468,7 @@ img {
   left: 0;
   width: 100%;
   height: 100%;
-  transform: translate(0, 100%);
+  transform: translate(0, 110%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -1435,7 +1481,9 @@ img {
 }
 
 .card-portfolio__link {
-  display: inline-block;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   text-decoration: none;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -1449,7 +1497,6 @@ img {
 }
 
 .card-portfolio__title {
-  display: block;
   font-style: normal;
   font-weight: bold;
   font-size: 18px;
