--- a/sass/components/_portfolio-cards.scss
+++ b/sass/components/_portfolio-cards.scss
@@ -3,17 +3,49 @@
     display: flex;
     flex-wrap: wrap;
     margin-bottom: -30px;
+    @media (max-width:768px) {
+    justify-content: center;
+    }
+
 }
 .portfolio__card {
-    margin-bottom: 30px;
-    margin-right: 30px;
-    width: 370px;
-    &:nth-child(3n+3) {
+margin-bottom: 30px;
+width: 100%;
+&:last-child{
+    margin-bottom: 0;
+}
+@media (min-width:768px) {
+  width: calc((100% - 2 * 30px) / 2);
+margin-right: 30px;
+margin-bottom: 30px;
+&:nth-child(2n){
+    margin-right: 0;
+}
+&:last-child{
+    margin-bottom: 0px;
     margin-right: 0px;
+}
+
+}
+@media (min-width:1200px) {
+      width: calc((100% - 3 * 30px) / 3);
+    margin-right: 30px;
+    margin-bottom: 30px;
+    &:nth-child(2n){
+    margin-right: 30px;
+    }
+    &:nth-child(3){margin-right: 0;}
+    &:nth-child(6){margin-right: 0;}
+    &:nth-child(9){margin-right: 0;}
+    &:nth-child(n+7){
+        margin-bottom: 0;
+    }
+
 }
 }
 
 .card-portfolio__content {
+flex:1 1 auto;
 border-bottom: 1px solid #EEEEEE;
 border-right: 1px solid #EEEEEE;
 border-left: 1px solid #EEEEEE;
@@ -23,6 +55,7 @@ padding: 20px 24px;
 .card-portfolio__image{
     position: relative;
     overflow: hidden;
+    max-height:294px ;
 }
 .card-portfolio__hover{
     position: absolute;
@@ -31,7 +64,7 @@ padding: 20px 24px;
     left: 0;
     width: 100%;
     height: 100%;
-    transform: translate(0,100%);
+    transform: translate(0,110%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     p{  
 padding: 63px 24px;
@@ -43,7 +76,9 @@ color: #FFFFFF;
 }
 
 .card-portfolio__link {
-display: inline-block;
+display: flex;
+flex-direction: column;
+height: 100%;
 text-decoration: none;
 transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 &:hover,&:focus{
@@ -55,7 +90,6 @@ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .card-portfolio__title {
- display: block;
 font-style: normal;
 font-weight: bold;
 font-size: 18px;
