--- a/sass/components/_portfolio-filter.scss
+++ b/sass/components/_portfolio-filter.scss
@@ -5,6 +5,7 @@
     margin-bottom: 50px;
     @media (max-width:768px) {
     flex-wrap: wrap;
+    justify-content: flex-start;
     }
 }
 .filter__item {
