--- a/sass/components/_order.scss
+++ b/sass/components/_order.scss
@@ -47,7 +47,7 @@
           rgba(47, 48, 58, 0.6),
           rgba(47, 48, 58, 0.6)
         ),
-        url('../img/hero/bgd2x.jpg');
+        url('../img/hero/bgd2xx.jpg');
     }
   }
 
